--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "@prisma/client": "^5.6.0",
     "graphql": "^16.8.1",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
+    "prisma": "^5.6.0",
     "typescript": "^5.2.2"
   }
 }
