--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:3107@localhost:5432/blog_db?schema=public"
+
+JWT_SECRET="HasiTohFasi"
+JWT_EXPIRES_IN="1d"
