--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   "dependencies": {
     "@apollo/server": "^4.9.5",
     "@prisma/client": "^5.6.0",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.0",
     "prisma": "^5.6.0",
     "typescript": "^5.2.2"
