--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/server": "^4.9.5",
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
+    "dataloader": "^2.2.2",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
